fix: fixes affiliate alignment, js video listener

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 1.25;
     color: #212529;
     text-align: left;
     margin: 0;
@@ -72,9 +72,10 @@ h1, h2, h3, h4, h5, h6 {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: black;
+    background-color: #161616;
     opacity: 1;
     z-index: 1;
+    transition: opacity 0.5s ease; /* transition for the opacity */
 }
 
 /* regular overlay to ensure white text visible over video */
@@ -221,81 +222,13 @@ p {
     max-height: 40px; 
 }
 
-
 .section_2 {
     margin: max(100vh, 350px) 50px 50px 50px;
-}
-
-
-/* Affiliates start*/
-.affiliates_grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-    box-sizing:border-box;
-}
-
-.affiliate_title {
-    position: relative;
-    transition: 0.3s;
-    border-radius: 5px;
-    overflow: hidden;
-}
-
-.affiliate_title::before {
-    content: "";
-    display: block;
-    padding-bottom: 100%;
-}
-
-.affiliate_title img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.affiliate_overlay {
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    transition: 0.3s ease;
-    opacity: 0; /* hide it initially */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #0000009f;
-}
-
-
-
-
-.affiliate_img_bg_colour {
-    color: white;
-}
-
-.affililate_tile:hover .affililate_overlay {
-    opacity: 1;
-}
-
-.affiliate_column {
-    text-align: center;
-    padding-top: 25px; 
-    display: block;
-    display: flex; /* flex column centered vertically */
-    flex-direction: column;
 }
 
 .sec_3_title {
     padding-top: 20vh;
 }
-
 
 /* About section start */
 
@@ -320,7 +253,6 @@ p {
     text-align: center;
     font-size: 40px;
     /* font white and bold */
-    color: #ffffff;
     font-family: 'Poppins', sans-serif;
     margin-top: 15px;
     font-weight: 700;
@@ -330,7 +262,6 @@ p {
     text-align: center;
     font-size: 20px;
     /* font white and bold */
-    color: black;
     font-family: 'Poppins', sans-serif;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -338,19 +269,20 @@ p {
 }
 
 .about_column {
-    background-color: white;
+    background-color: #5757576e;
     text-align: center;
-    padding-top: 25px; 
+    padding: 25px 15px;
     display: block;
     display: flex; 
     flex-direction: column;
     border-radius: 8px;
-    line-height: 0.5;
+    color: white;
 }
 
 
 .sec_4_title {
     padding-top: 20vh;
+    padding-bottom: 15px;
 }
 
 /* About section end */
@@ -437,8 +369,40 @@ p {
     flex-direction: column;
 }
 
+
 .sec_2_title {
     padding-top: 20vh;
 }
 
+a {
+    text-decoration: underline;
+    color: #FFCC70;
+}
 
+/* affiliates */
+
+.affiliates_row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; /* Space between items */
+    background-color: #5757576e;
+    padding: 25px;
+    border-radius: 5px;
+    margin-top: 15px;
+    box-sizing: border-box;
+}
+
+.affiliate_item {
+    flex: 1 1 calc(25% - 20px); 
+    max-width: calc(25% - 20px); 
+    align-self: center;
+    background-color: white;
+    border-radius: 5px;
+    padding: 5px;
+    box-sizing: border-box; 
+}
+
+.affiliate_item img {
+    width: 100%;
+    height: auto; /* Keeps the aspect ratio of the image */
+}
